aggiunti metodi mappati /add*form e creati 3 validators

--- a/src/main/resources/messages/validation_IT.properties
+++ b/src/main/resources/messages/validation_IT.properties
@@ -1,3 +1,7 @@
 required.request.customerName = Campo obbligatorio
 required.request.customerSurname = Campo obbligatorio
 required.request.customerEmail = Campo obbligatorio
+invalidPhotographerId.photo.photographer = L'ID del fotografo non è valido
+required.photo.name = Campo obbligatorio
+required.photo.imagePath = Campo obbligatorio
+required.photo.photographer = Campo obbligatorio
