--- a/src/main/resources/messages/validation_IT.properties
+++ b/src/main/resources/messages/validation_IT.properties
@@ -4,3 +4,5 @@ required.request.customerEmail = Campo obbligatorio
 required.photo.name = Campo obbligatorio
 required.photo.imagePath = Campo obbligatorio
 required.photo.phId = Non valido
+required.photographer.name = Campo obbligatorio
+required.photographer.surname = Campo obbligatorio
