validator del album quasi finito

--- a/src/main/resources/messages/validation_IT.properties
+++ b/src/main/resources/messages/validation_IT.properties
@@ -6,3 +6,6 @@ required.photo.imagePath = Campo obbligatorio
 required.photo.phId = Non valido
 required.photographer.name = Campo obbligatorio
 required.photographer.surname = Campo obbligatorio
+required.album.name = Campo obbligatorio
+required.album.description = Campo obbligatorio
+required.album.imagePath = Campo obbligatorio
