--- a/src/main/resources/messages/validation_IT.properties
+++ b/src/main/resources/messages/validation_IT.properties
@@ -9,3 +9,5 @@ required.photographer.surname = Campo obbligatorio
 required.album.name = Campo obbligatorio
 required.album.description = Campo obbligatorio
 required.album.imagePath = Campo obbligatorio
+required.albumphoto.idAlbum = Campo obbligatorio
+required.albumphoto.idPhoto = Campo obbligatorio
